# callm

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cli.py  main.py  pyproject.toml
callm/: config.py  evaluator.py  extractors.py  metrics.py  prompts.py  utils.py
callm/data/: __init__.py  answers_data.py  classification.py  evaluator_data.py  is_true_data.py  simulation.py  triviaQA.py  untokenized_evaluator_data.py  untokenized_is_true_data.py  untokenized_triviaQA.py
callm/extractors/: __init__.py  base.py  mmlu.py  triviaqa.py
callm/metrics/: __init__.py  classification.py  confidences.py  constants.py  utils.py
callm/models/: __init__.py  base.py  evaluator.py  gcp_evaluator.py  gcp_llm.py  llm.py
callm/prompts/: __init__.py  base.py  mmlu.py  triviaqa.py
callm/tests/: test_answers_data.py  test_chat_template_kwargs.py  test_cli.py  test_datamodule.py  test_evaluator.py  test_extractors.py  test_gcp_models.py  test_integration.py  test_llm.py  test_metrics.py  test_mmlu_data.py  test_mmlu_extractors.py  test_prompts.py  test_resume.py  test_untokenized_data.py  test_untokenized_is_true_data.py  test_utils.py
configs/: config_base.yaml  config_base_evaluation.yaml  config_base_validation.yaml  config_gcp_evaluation.yaml  config_gcp_validation.yaml  config_mmlu_base_validation.yaml  config_mmlu_gcp_validation.yaml
notebooks/: casos_v2.ipynb  cut_csv.ipynb  merge_results.ipynb  rerun_metrics.py  scatter.ipynb  shifted_aurc.ipynb
outputs/: aggregated_results.csv  table_standard.tex
scripts/: aggregate_results.py  calculate_mmlu_metrics.py  classification_results.py  generate_mmlu_table.py  generate_paper_table.py  image_classification.py  image_classification.sh  llm_confidence_results.py  merge_mmlu_istrue.py  metrics_scatter_plots.py  plot_cncag_family.py  plot_cost.py  rerun_mmlu.sh  simulate_confidences.py  simulation_results.py
(+13 files in other folders)
