[project]
name = "callm"
version = "0.1.0"
description = ""
authors = [{ name = "Erik Ernst", email = "erik_ernst@hotmail.com.ar" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pre-commit>=4.3.0,<5",
    "lightning[pytorch-extra]>=2.5.5,<3",
    "jinja2>=3.1.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
