[project]
name = "callm"
version = "0.1.0"
description = ""
authors = [{ name = "Erik Ernst", email = "erik_ernst@hotmail.com.ar" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "pre-commit>=4.3.0,<5",
    "lightning[pytorch-extra]>=2.5.5,<3",
    "jinja2>=3.1.0,<4",
    "datasets>=4.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "ipython>=9.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["callm"]
