[project]
name = "callm"
version = "0.1.0"
description = ""
authors = [{ name = "", email = "" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "pre-commit>=4.3.0,<5",
    "lightning[pytorch-extra]>=2.5.5,<3",
    "jinja2>=3.1.0,<4",
    "datasets>=4.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "ipython>=9.8.0",
    "torchvision>=0.25.0",
    "google-genai>=1.66.0",
    "ipykernel>=7.2.0",
    "accelerate>=1.13.0",
    "mistral-common>=1.10.0",
    "torch-uncertainty>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["callm"]
